# visDrone_yolo_project

./: .gitignore  04-yolo-visdrone-deployment-profiling.ipynb  README.md  pyproject.toml
figures/: error_analysis_summary.json
